--- a/src/app/google/search/search.component.html
+++ b/src/app/google/search/search.component.html
@@ -1,22 +1,23 @@
-
 <div class="clearfix">
-   
-        <div class="d-flex justify-content-end p-3 ms-auto">
-           
-                <span class="top-bar"><a href="https://mail.google.com/mail/u/0/">Gmail</a></span>
-                <span class="top-bar"><a href="#">Image</a></span>
-                <!-- <ul  style="list-style: none;">
+
+    <div class="d-flex justify-content-end p-3 ms-auto">
+
+        <span class="top-bar"><a href="https://mail.google.com/mail/u/0/">Gmail</a></span>
+        <span class="top-bar"><a href="#">Image</a></span>
+        <!-- <ul  style="list-style: none;">
                     <li><a href="#">Gmail</a></li>
                     <li><a href="#">Image</a></li>
                 </ul> -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="45" height="50" fill="currentColor" class="bi bi-person-circle mr-3 top-bar" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                  </svg>
-     
+        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="50" fill="currentColor"
+            class="bi bi-person-circle mr-3 top-bar" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+            <path fill-rule="evenodd"
+                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+        </svg>
 
-        </div>
- 
+
+    </div>
+
 
 </div>
 
@@ -24,7 +25,8 @@
 <div class="container body-container">
     <div class="col-sm-12 ">
         <div class="d-flex justify-content-center">
-            <img class="img-fluid" alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+            <img class="img-fluid" alt="Google"
+                src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         </div>
     </div>
 
@@ -32,15 +34,21 @@
     <div class="col-sm-12 mt-3">
         <div class="d-flex justify-content-center">
             <div class=" col-sm-6 searchbar">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search img-fluid searchicon" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                  </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-search img-fluid searchicon" viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
                 <!-- <img  class="img-fluid searchicon" src="../../../assets/img/search.svg"/> -->
-                <input class="searchinput" (keyup.enter)="onSearch()" [(ngModel)]="searchValue" [ngModelOptions]="{ standalone: true }" type="text" title="search" placeholder="Search Google or type a URL">
-                <a href="#"> <img class="img-fluid  voice" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png" title="Search by Voice"></a>
+                <input class="searchinput" (keyup.enter)="onSearch()" [(ngModel)]="searchValue"
+                    [ngModelOptions]="{ standalone: true }" type="text" title="search"
+                    placeholder="Search Google or type a URL">
+                <a href="#"> <img class="img-fluid  voice"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png"
+                        title="Search by Voice"></a>
             </div>
-           
-         </div>
+
+        </div>
     </div>
 
     <div class="col-sm-12 mt-3">
@@ -48,57 +56,44 @@
             <div class="title-card" (click)="onClickTitle('youtube')">
                 <div class="title">
                     <img class="titleimg" src="../../../assets/img/youtube.svg" height="20" width="26" />
-                  
+
                 </div>
                 <div class="titlename">
                     <span>YouTube</span>
                 </div>
             </div>
-        
+
             <div class="title-card" (click)="onClickTitle('facebook')">
                 <div class="title">
                     <img class="titleimg" src="../../../assets/img/Facebook.png" height="26" width="26" />
-                  
+
                 </div>
                 <div class="titlename">
                     <span>Facebook</span>
                 </div>
             </div>
-            
+
             <div class="title-card" (click)="onClickTitle('linkedin')">
                 <div class="title">
-                    <img class="titleimg" src="../../../assets/img/linkedin.png" height="26" width="26" /> 
+                    <img class="titleimg" src="../../../assets/img/linkedin.png" height="26" width="26" />
                 </div>
                 <div class="titlename">
                     <span class="m-1">Linkedin</span>
                 </div>
             </div>
-        
-            <div class="title-card" >
+
+            <div class="title-card">
                 <div class="title">
-                  
+
                     <img class="plusicon" src="../../../assets/img/plus.svg" />
                 </div>
                 <div class="name">
                     <span class="">Add Link</span>
                 </div>
             </div>
-           
+
         </div>
     </div>
 
 
 </div>
-
-
- 
-
-
-
-
-    
-
-    
-
-
-
